info table done

--- a/index.html
+++ b/index.html
@@ -21,21 +21,23 @@
             <h1>Train Scheduler</h1>
             <p>PLACEHOLDER</p>
         </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">Current Train Schedule</div>
-        <div class="panel-body">
-            <div class="row">
-                <div class="col-xs-3 name">Train Name</div>
-                <div class="col-xs-3 destination">Destination</div>
-                <div class="col-xs-2 frequency">Frequency</div>
-                <div class="col-xs-2 arrival">Next Arrival</div>
-                <div class="col-xs-2 minutes">Minutes Away</div>
-            </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">Current Train Schedule</div>
+            <table class="table">
+                <th class="name">Train Name</th>
+                <th class="destination">Destination</th>
+                <th class="frequency">Frequency</th>
+                <th class="arrival">Next Arrival</th>
+                <th class="minutes">Minutes Away</th>
+                <tbody>
+                    <!-- APPEND INFO HERE -->
+                </tbody>
+            </table>
+            <!-- VV PANEL END VV -->
         </div>
-        <!-- PANEL END -->
+        
+        <!-- VV CONTAINER END VV -->
     </div>
-    <!-- CONTAINER END -->
-</div> 
 
 
     <!-- JQUERY -->
