--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- FIREBASE -->
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+    <!-- MOMENT -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 </head>
 
 <body>
@@ -56,7 +58,7 @@
                             <label for="destination">Destination: </label>
                             <input type="text" class="form-control destination text-center" aria-describedby="sizing-addon1">
                             <br>
-                            <label for="time">First Train Time: </label>
+                            <label for="time">First Train Time: (HH:mm) - Military Time</label>
                             <input type="text" class="form-control time text-center" aria-describedby="sizing-addon1">
                             <br>
                             <label for="freq">Frequency: </label>
