appending line added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <th>Frequency</th>
                         <th>Next Arrival</th>
                         <th>Minutes Away</th>
-                        <tbody class="trainDisplpay">
+                        <tbody>
                             <!-- APPEND INFO HERE -->
                         </tbody>
                     </table>
@@ -61,7 +61,7 @@
                             <label for="time">First Train Time: (HH:mm) - Military Time</label>
                             <input type="text" class="form-control time text-center" aria-describedby="sizing-addon1">
                             <br>
-                            <label for="freq">Frequency: </label>
+                            <label for="freq">Frequency: (mins)</label>
                             <input type="text" class="form-control freq text-center" aria-describedby="sizing-addon1">
                             <br>
                             <button class="btn btn-default" id="btn-submit" type="submit">Submit</button>
