--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <!-- INFO PANEL -->
         <div class="row">
-            <div class="col-xs-12 col-md-8">
+            <div class="col-xs-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">Current Train Schedule</div>
                     <table class="table">
@@ -46,7 +46,7 @@
         <!-- </div> -->
         <!-- <div class="row"> -->
             <!-- INPUT FORM -->
-            <div class="col-xs-12 col-md-4">
+            <div class="col-xs-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">New Train Info</div>
                     <div class="panel-body">
