--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Subway Slider</title>
+    <title>Subway Schedule</title>
     <!-- RESET -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <!-- BOOTSTRAP -->
@@ -23,14 +23,14 @@
     <br>
     <div class="container">
         <div class="jumbotron text-center">
-            <h1 class="jhead">Subway Slider</h1>
+            <h1 class="jhead">Subway Schedule</h1>
         </div>
         <!-- INFO PANEL -->
         <div class="row">
             <div class="col-xs-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">Current Train Schedule</div>
-                    <table class="table">
+                    <table class="table text-center">
                         <th>Train Name</th>
                         <th>Destination</th>
                         <th>Frequency</th>
